--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stopwatch-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://felds.github.io/stopwatch-demo",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -30,6 +31,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.8.22"
+    "@types/react": "^16.8.22",
+    "gh-pages": "^2.0.1"
   }
 }
