--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://felds.github.io/stopwatch-demo/",
   "dependencies": {
     "@felds/stopwatch": "^2.1.0",
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -34,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.8",
     "@types/react": "^16.8.22",
     "gh-pages": "^2.0.1"
   }
